--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,11 @@ main {
     white-space: pre-wrap; /* Beibehalten von Zeilenumbrüchen und Leerzeichen */
 }
 
+.tile-container h3 {
+    width: 100%;
+    height: 85%;
+}
+
 /* Kachel-Stile */
 .tile-container {
     display: grid;
