--- a/styles.css
+++ b/styles.css
@@ -304,79 +304,7 @@ main {
     background-color: #005f9f; /* Helleres Blau beim Hover */
 }
 
-/* Restliche Stile (test slide wrapper)*/
-
-.slide_wrapper{
-    width:60%;
-    Border: 1px solid #001f3f;
-    margin-top: 137%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    position: relative;
-}
-
-.slide_paar{
-    width: 100%;
-    display:none;
-}
-
-.slide_sichtbar{
-    display: block;
-
-}
-
-.slide_paar >img {
-    width: 100%;
-    display:block;
-    animation:übergang 2s;
-}
-
-@keyframes übergang{
-    from {opacity:0.2;}
-    to {opacity:1;}
-}
-
-.slide_text{
-    color:#fff;
-    font-size:12pt;
-    display:flex;
-    justify-content: center;
-    border-top: 1px solid #fff;
-}
-
-.slide_weiter,.Slide_zurück{
-    color:#fff;
-    font-size:12pt;
-    cursor: pointer;
-    position:absolute;
-    bottom:0;
-    transition:0.5s;
-}
-
-.slide_weiter{
-    right:10px;
-}
-
-.Slide_zurück{
-    left:10px;
-}
-
-@media (max-widh:1000px){
-    .slide_text,.slide_weiter,.Slide_zurück{
-        font-size:6pt;
-
-    }  
-}
-
-@media (max-widh:600px){
-    .slide_wrapper{
-        width:85%;}
-}
-
-@media (min-widh:900px){
-    .slide_weiter:hover,.Slide_zurück:hover{
-        opacity:0.7;
-    }   
-}
+/* Restliche Stile */
 
 #home .overlay {
     background: rgba(0, 0, 0, 0.5);
