--- a/styles.css
+++ b/styles.css
@@ -301,11 +301,12 @@ main {
 
 /* Swipe Gallery Styles */
 .swipe-gallery {
-    position: absolute; /* Fixes position at the bottom of the page */
+    position: static; /* Fixes position at the bottom of the page */
+    margin-top: -1200px;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 90%; /* Covers 90% of the lower part of the page */
+    width: 900%;
+    height: 80%; /* Covers 90% of the lower part of the page */
     background: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
     display: flex;
     justify-content: center;
